--- a/public/game/custom.css
+++ b/public/game/custom.css
@@ -181,14 +181,14 @@
 	.tada-game-spin-title {
 		text-align: center;
 		font-size: 36px;
-    color:black !important;
+    color:black;
 		font-family: "Open Sans";
 		font-weight: bold;
 	}
   .tada-game-spin-title1 {
 		text-align: center;
 		font-size: 36px;
-    color:black !important;
+    color:black;
 		font-family: "Open Sans";
 		font-weight: bold;
 	}
