--- a/public/game/custom.css
+++ b/public/game/custom.css
@@ -1384,25 +1384,25 @@
  */
 @-webkit-keyframes swirl-in-fwd {
 	0% {
-    -webkit-transform: rotate(0) scale(1);
-            transform: rotate(0) scale(1);
+    -webkit-transform: scale(1);
+            transform: scale(1);
     opacity: 1;
   }
   100% {
-    -webkit-transform: rotate(-720deg) scale(1.4);
-            transform: rotate(-720deg) scale(1.4);
+    -webkit-transform: scale(1.4);
+            transform: scale(1.4);
     opacity: 1;
   }
 }
 @keyframes swirl-in-fwd {
 	0% {
-    -webkit-transform: rotate(0) scale(1);
-            transform: rotate(0) scale(1);
+    -webkit-transform: scale(1);
+            transform: scale(1);
     opacity: 1;
   }
   100% {
-    -webkit-transform: rotate(-720deg) scale(1.4);
-            transform: rotate(-720deg) scale(1.4);
+    -webkit-transform: scale(1.4);
+            transform: scale(1.4);
     opacity: 1;
   }
 }
