--- a/public/game/custom.css
+++ b/public/game/custom.css
@@ -55,6 +55,7 @@
 	border: none;
 	outline: none !important;
 	color: white;
+	width: 90%;
 	font-weight: bold;
 	font-size: 16px;
 	background-color: #29abe2;
@@ -63,12 +64,22 @@
 	/* animation-name: none !important;
      */
 }
-
-.tada-floating-dialog button:hover {
-	-webkit-animation: heartbeat 1.5s ease-in-out infinite both;
-	animation: heartbeat 1.5s ease-in-out infinite both;
+.tada-floating-dialog-button-div {
+		width: 100%;
+		display: flex;
+		justify-content: center;
+		align-items: center;
 }
 
+.tada-floating-dialog button:hover {
+	transition: 0.4s all ease;
+	width: 110%;
+	filter: brightness(1.2);
+}
+.tada-floating-dialog button:active {
+	transition: 0.4s all ease;
+	width: 90%;
+}
 
 /* .tada-floating-dialog button:active {
      background-color: #29abe2;
@@ -98,25 +109,28 @@
 	align-items: flex-start;
 	position: absolute;
 	cursor: pointer;
-	padding: 10px;
 	background-repeat: no-repeat;
-	-webkit-box-shadow: 3px 3px 0px 0px rgba(230, 230, 230, 1);
-	-moz-box-shadow: 3px 3px 0px 0px rgba(230, 230, 230, 1);
-	box-shadow: 3px 3px 0px 0px rgba(230, 230, 230, 1);
 }
 
-.tada_start_icon_div:hover {
-	-webkit-animation: jello-horizontal 0.9s both;
-	animation: jello-horizontal 0.9s both;
+.tada_start_icon_div:hover .cls-2 {
+	fill: #6dbf92;
+}
+.tada_start_icon_div:hover .cls-3 {
+	fill: #6dbf92;
+}
+.tada_start_icon_div:hover .cls-6 {
+	fill: #efd895;
+}
+.tada_start_icon_div:hover .cls-4 {
+	fill: #efd895;
+}
+.tada_start_icon_div:hover .cls-7 {
+	fill: #efd895;
 }
 
-.tada_start_icon_div img {
-	display: flex;
-	width: 30px;
-	height: 30px;
-	object-fit: contain;
+.tada_start_icon_div:hover .cls-5 {
+	fill: #51c385;
 }
-
 .modal-header {
 	padding: 6px 0 !important;
 	margin: 0 15px;
@@ -157,7 +171,7 @@
 	border-radius: 30px;
 	border: none;
 	color: white;
-	width: 100%;
+	width: 90%;
 	padding: 10px;
 	font-family: "Open Sans";
 	font-size: 15px;
@@ -168,13 +182,13 @@
 #tada_spin_start_button:hover {
   filter: brightness(1.2);
   transition: 0.4s all ease;
-  transform: scale(1.1, 1);
+  width: 100%;
 }
 
 #tada_spin_start_button:active {
   filter: brightness(1.2);
   transition: 0.4s all ease;
-  transform: scale(0.9);
+	width: 90%;
 }
 
 .tada_apply_my_account_parent {
@@ -190,7 +204,7 @@
 	border-radius: 30px;
 	border: none;
 	color: white;
-	width: 100%;
+	width: 90%;
 	padding: 10px;
 	font-family: "Open Sans";
 	font-size: 14px;
@@ -202,23 +216,23 @@
 
 #tada_apply_my_discount:hover {
 	transition: 0.4s all ease;
-  transform: scale(1.1, 1);
+  width: 110%;
 	filter: brightness(1.2);
 }
 
 #tada_apply_my_discount:active {
 	transition: 0.4s all ease;
-  transform: scale(0.9);
-	filter: brightness(1.2);
+  width: 80%;
 }
 
 .tada-dialog-body {
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	width: 80%;
+	width: 85%;
 	margin: 0 auto;
 	padding-bottom: 0 !important;
+	overflow: hidden;
 }
 
 .tada-dialog-body-success {
@@ -232,13 +246,16 @@
 }
 
 .tada-dialog-mail-container {
-	width: 55%;
+	width: 60%;
 	justify-content: center;
 	display: flex;
 	flex-direction: column;
 	margin: 0 auto;
 	margin-top: 25px;
 	align-items: center;
+}
+.tada-dialog-mail-container #tada_game_email_input {
+	width: 90%;
 }
 
 .tada-game-spin-title {
@@ -339,8 +356,8 @@
 	display: none;
 	text-shadow: 2px 2px #00000033;
 	margin-bottom: -30px;
-	-webkit-animation: text-pop-up-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-	animation: text-pop-up-top 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+	-webkit-animation: rotate-vert-center 1s cubic-bezier(0.455, 0.030, 0.515, 0.955) both;
+	        animation: rotate-vert-center 1s cubic-bezier(0.455, 0.030, 0.515, 0.955) both;
 }
 
 .tada-game-expiry {
@@ -460,8 +477,14 @@
 }
 
 #tada_ramaind_view_coupon_button:hover {
-	-webkit-animation: heartbeat 1.5s ease-in-out both;
-	animation: heartbeat 1.5s ease-in-out both;
+	transition: 0.4s all ease;
+  width: 220px;
+	filter: brightness(1.2);
+}
+
+#tada_ramaind_view_coupon_button:active {
+	transition: 0.4s all ease;
+  width: 180px;
 }
 
 #tada_ramaind_view_coupon_button {
@@ -683,8 +706,8 @@
 }
 
 .swirl-in-fwd-reverse {
-	-webkit-animation: swirl-in-fwd 1.2s ease-out reverse both;
-	        animation: swirl-in-fwd 1.2s ease-out reverse both;
+	-webkit-animation: swirl-in-fwd 0.8s ease-out reverse both;
+	        animation: swirl-in-fwd 0.8s ease-out reverse both;
 }
 
 .rotate-scale-down {
@@ -692,11 +715,35 @@
 	        animation: rotate-scale-down 0.65s linear both;
 }
 
+.tada-progress-bar {
+	width: 100%;
+	border-radius: 30px;
+	height: 25px;
+	background-color: #e6e6e6;
+	-webkit-box-shadow: 4px 4px 5px 0px rgba(232,232,232,1);
+	-moz-box-shadow: 4px 4px 5px 0px rgba(232,232,232,1);
+	box-shadow: 4px 4px 5px 0px rgba(232,232,232,1);
+}
+.tada-progress-value {
+	border-radius: 30px;
+	height: 100%;
+}
+.tada-progress-bar-top-text {
+	text-align: center;
+	font-size: 15px;
+	font-family:"Open Sans";
+	color:#808080;
+	padding-top: 30px;
+	margin-bottom:4px;
+}
 .cls-95-theme2 {
     fill: #8e52ce;
 }
 
-
+.rotate-vert-center {
+	-webkit-animation: rotate-vert-center 0.5s cubic-bezier(0.455, 0.030, 0.515, 0.955) both;
+	        animation: rotate-vert-center 0.5s cubic-bezier(0.455, 0.030, 0.515, 0.955) both;
+}
 
 /* confetti Color set */
 .cls-confetti-theme-wave {
@@ -1487,4 +1534,341 @@
     -webkit-transform: scale(1) rotateZ(360deg);
             transform: scale(1) rotateZ(360deg);
   }
+}
+
+/* ----------------------------------------------
+ * Generated by Animista on 2019-9-14 22:20:24
+ * Licensed under FreeBSD License.
+ * See http://animista.net/license for more info.
+ * w: http://animista.net, t: @cssanimista
+ * ---------------------------------------------- */
+
+/**
+ * ----------------------------------------
+ * animation rotate-vert-center
+ * ----------------------------------------
+ */
+@-webkit-keyframes rotate-vert-center {
+  0% {
+    -webkit-transform: rotateY(0);
+            transform: rotateY(0);
+  }
+  50% {
+    -webkit-transform: rotateY(360deg);
+            transform: rotateY(360deg);
+  }
+	100% {
+		-webkit-transform: rotateY(360deg);
+            transform: rotateY(360deg);
+		opacity: 0;
+	}
+}
+@keyframes rotate-vert-center {
+  0% {
+    -webkit-transform: rotateY(0);
+            transform: rotateY(0);
+  }
+	50% {
+    -webkit-transform: rotateY(360deg);
+            transform: rotateY(360deg);
+  }
+	100% {
+		-webkit-transform: rotateY(360deg);
+            transform: rotateY(360deg);
+		opacity: 0;
+	}
+}
+
+
+/* Animation Button Css */
+.header-wrap {
+  display: block;
+  width: auto;
+  height: auto;
+  padding: 0;
+  text-align: center;
+  font-size: 25px;
+  font-family: 'Press Start 2P', cursive;
+  transform: perspective(200px) rotateX(10deg);
+  letter-spacing: .1em;
+  user-select: none;
+  text-shadow: 0 -1px 0 #fff, 0 1px 0 #004d40, 0 2px 0 #00483B, 0 3px 0 #004639, 0 4px 0 #004336, 0 5px 0 #004134, 0 6px 0 #003F32, 0 7px 0 #003D30, 0 8px 0 #003A2D, 0 9px 0 #00382B, 0 10px 0 #003528, 0 11px 0 #003225, 0 12px 0 #002F22, 0 13px 0 #002B1E, 0 14px 0 #00281C, 0 15px 0 #001F13, 0 22px 30px rgba(0, 0, 0, 0.9), 0 22px 30px rgba(0, 0, 0, 0.9), 0 22px 15px rgba(0, 0, 0, 0.9), 0 11px 15px rgba(0, 0, 0, 0.9), 0 15px 20px rgba(0, 0, 0, 0.9), 0 15px 11px rgba(0, 0, 0, 0.9), 0 16px 11px rgba(0, 0, 0, 0.9);
+  transition: text-shadow .3s ease .3s,  transform .3s ease .3s, letter-spacing .3s ease .3s;
+}
+.header-wrap:hover {
+  transition: text-shadow .33s ease,  transform .3s ease, letter-spacing .3s ease;
+  text-shadow: 0 0 0 #004134, 0 1px 0 #00483B, 0 2px 0 #003528, 0 3px 3px rgba(0, 0, 0, 0.9);
+  transform: translate(0px, 15px) perspective(200px) rotateX(10deg);
+  letter-spacing: .125em;
+}
+.tada-btn {
+	background-color: unset !important;
+
+}
+.retro-btn {
+  text-transform: uppercase;
+  background: 0 0;
+}
+.retro-btn.lg .btn {
+  width: 294px;
+  height: 54px;
+  font-size: 17px;
+  line-height: 50px;
+}
+.retro-btn.lg .btn .btn-inner .content-wrapper .btn-content .btn-content-inner:before {
+  padding-top: 0;
+  letter-spacing: .15em;
+}
+.retro-btn.sm .btn {
+  width: 165px;
+  height: 37px;
+  font-size: 10.5px;
+  line-height: 32.5px;
+}
+.retro-btn.sm .btn .btn-inner .content-wrapper .btn-content .btn-content-inner:before {
+  padding-top: 0;
+}
+.retro-btn.primary .btn .btn-inner .content-wrapper:before {
+  background-color: #051D41;
+}
+.retro-btn.primary .btn .btn-inner .content-wrapper .btn-content {
+  background-color: #0d47a1;
+}
+.retro-btn.secondary .btn .btn-inner .content-wrapper:before {
+  background-color: #263238;
+}
+.retro-btn.secondary .btn .btn-inner .content-wrapper .btn-content {
+  background-color: #37474F;
+}
+.retro-btn.danger .btn .btn-inner .content-wrapper:before {
+  background-color: #590000;
+}
+.retro-btn.danger .btn .btn-inner .content-wrapper .btn-content {
+  background-color: #CC0000;
+}
+.retro-btn.warning .btn .btn-inner .content-wrapper:before {
+  background-color: #6A3800;
+}
+.retro-btn.warning .btn .btn-inner .content-wrapper .btn-content {
+  background-color: #FF8800;
+}
+.retro-btn.success .btn .btn-inner .content-wrapper:before {
+  background-color: #00481F;
+}
+.retro-btn.success .btn .btn-inner .content-wrapper .btn-content {
+  background-color: #009A3E;
+}
+.retro-btn.info .btn .btn-inner .content-wrapper:before {
+  background-color: #164E62;
+}
+.retro-btn.info .btn .btn-inner .content-wrapper .btn-content {
+  background-color: #33b5e5;
+}
+.retro-btn .btn {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  display: inline-block;
+  vertical-align: middle;
+  padding-top: 3px;
+  position: relative;
+  cursor: pointer;
+  font-weight: 600;
+  font-family: inherit;
+  font-style: normal;
+  letter-spacing: 0;
+  text-rendering: auto;
+  text-decoration: none;
+  text-align: center;
+  -webkit-transition: opacity .1s ease-out;
+  transition: opacity .1s ease-out;
+  z-index: 5;
+  -webkit-font-smoothing: antialiased;
+	width: 80px;
+	height: 65px;
+  font-size: 12px;
+  line-height: 24px;
+  text-decoration-color: initial;
+  -webkit-tap-highlight-color: transparent;
+}
+.retro-btn .btn, .retro-btn .btn:focus {
+  outline-color: 0;
+  outline-style: none;
+  outline-width: 0;
+}
+.retro-btn .btn:hover .btn-content-inner:before {
+  background-color: rgba(13, 13, 13, 0.1);
+}
+.retro-btn .btn:before {
+  content: " ";
+  width: calc(100% - 2px);
+  height: calc(100% - 4px);
+  bottom: -1px;
+  left: 1px;
+  position: absolute;
+  border-radius: 3px;
+  z-index: 1;
+  -webkit-transition: background .12s ease-out, -webkit-transform .12s ease-out;
+  transition: background .12s ease-out, -webkit-transform .12s ease-out;
+  transition: transform .12s ease-out, background .12s ease-out;
+  transition: transform .12s ease-out, background .12s ease-out, -webkit-transform .12s ease-out;
+}
+.retro-btn .btn.btn-left:before {
+  -webkit-transform: skewY(1deg) translate3d(0, -0.5px, 0);
+  transform: skewY(1deg) translate3d(0, -0.5px, 0);
+}
+.retro-btn .btn.btn-left .btn-content {
+  -webkit-transform: skewY(-1deg);
+  transform: skewY(-1deg);
+}
+.retro-btn .btn.btn-right:before {
+  -webkit-transform: skewY(-1deg) translate3d(0, -0.5px, 0);
+  transform: skewY(-1deg) translate3d(0, -0.5px, 0);
+}
+.retro-btn .btn.btn-right .btn-content {
+  -webkit-transform: skewY(1deg);
+  transform: skewY(1deg);
+}
+.retro-btn .btn.btn-center:before {
+  -webkit-transform: translate3d(0, -1px, 0);
+  transform: translate3d(0, -1px, 0);
+}
+.retro-btn .btn.btn-center .btn-content {
+  -webkit-transform: translate3d(0, 1px, 0);
+  transform: translate3d(0, 1px, 0);
+}
+.retro-btn .btn.btn-active .btn-inner .content-wrapper .btn-content {
+  -webkit-transition: background .12s ease-out,color .12s ease-out,-webkit-transform .12s ease-out;
+  transition: background .12s ease-out,color .12s ease-out,-webkit-transform .12s ease-out;
+  transition: transform .12s ease-out,background .12s ease-out,color .12s ease-out;
+  transition: transform .12s ease-out,background .12s ease-out,color .12s ease-out,-webkit-transform .12s ease-out;
+  -webkit-transform: translate3d(0, 2px, 0);
+  transform: translate3d(0, 2px, 0);
+}
+.retro-btn .btn.btn-active .btn-inner .content-wrapper .btn-content .btn-content-inner {
+  opacity: .1;
+}
+.retro-btn .btn.btn-active:before {
+  -webkit-transform: translate3d(0, -3px, 0);
+  transform: translate3d(0, -3px, 0);
+}
+.retro-btn .btn .btn-inner {
+  display: block;
+  height: 100%;
+}
+.retro-btn .btn .btn-inner .content-wrapper {
+  position: relative;
+  font-family: inherit;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: stretch;
+  -ms-flex-align: stretch;
+  align-items: stretch;
+  width: 100%;
+  height: calc(100% - 3px);
+  margin-top: -3px;
+}
+.retro-btn .btn .btn-inner .content-wrapper:after, .retro-btn .btn .btn-inner .content-wrapper:before, .retro-btn .btn .btn-inner .content-wrapper .btn-content:after, .retro-btn .btn .btn-inner .content-wrapper .btn-content:before, .retro-btn .btn .btn-inner .content-wrapper .btn-content .btn-content-inner:before {
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+}
+.retro-btn .btn .btn-inner .content-wrapper:before {
+  background-image: initial;
+  background-color: #cdd4d4;
+  content: " ";
+  border-radius: 3px;
+  top: auto;
+  bottom: -3px;
+	left:2px;
+  z-index: 1;
+  -webkit-transition: background .185s ease-out, -webkit-transform .185s ease-out;
+  transition: background .185s ease-out, -webkit-transform .185s ease-out;
+  transition: transform .185s ease-out, background .185s ease-out;
+  transition: transform .185s ease-out, background .185s ease-out, -webkit-transform .185s ease-out;
+}
+.retro-btn .btn .btn-inner .content-wrapper:after {
+  background-color: rgba(13, 13, 13, 0.15);
+  content: " ";
+  border-radius: 3px;
+  z-index: 3;
+  width: 0;
+  top: 2px;
+}
+.retro-btn .btn .btn-inner .content-wrapper .btn-content {
+  background-image: initial;
+  background-color: #efefef;
+  color: #ebf1f8;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  border-radius: 3px;
+  text-indent: 0;
+  z-index: 3;
+  overflow: hidden;
+  padding: 0 10px;
+  -webkit-transition: border .185s ease-out,background .185s ease-out,color .185s ease-out,-webkit-transform .185s ease-out;
+  transition: border .185s ease-out,background .185s ease-out,color .185s ease-out,-webkit-transform .185s ease-out;
+  transition: border .185s ease-out,transform .185s ease-out,background .185s ease-out,color .185s ease-out;
+  transition: border .185s ease-out,transform .185s ease-out,background .185s ease-out,color .185s ease-out,-webkit-transform .185s ease-out;
+}
+.retro-btn .btn .btn-inner .content-wrapper .btn-content:before, .retro-btn .btn .btn-inner .content-wrapper .btn-content:after {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  color: rgba(255, 255, 255, 0.8);
+  opacity: 0;
+  -webkit-transition: opacity .1125s ease-out .05s, -webkit-transform .185s ease-out .05s;
+  transition: opacity .1125s ease-out .05s, -webkit-transform .185s ease-out .05s;
+  transition: transform .185s ease-out .05s, opacity .1125s ease-out .05s;
+  transition: transform .185s ease-out .05s, opacity .1125s ease-out .05s, -webkit-transform .185s ease-out .05s;
+}
+.retro-btn .btn .btn-inner .content-wrapper .btn-content:before {
+  content: " ";
+  -webkit-transform: translate3d(0, 50%, 0);
+  transform: translate3d(0, 50%, 0);
+}
+.retro-btn .btn .btn-inner .content-wrapper .btn-content:after {
+  content: " ";
+  -webkit-transform: translate3d(0, -50%, 0);
+  transform: translate3d(0, -50%, 0);
+}
+.retro-btn .btn .btn-inner .content-wrapper .btn-content .btn-content-inner {
+  display: block;
+  -webkit-transition: opacity 75ms ease-out .1125s;
+  transition: opacity 75ms ease-out .1125s;
+}
+.retro-btn .btn .btn-inner .content-wrapper .btn-content .btn-content-inner:before {
+  content: attr(label);
+  padding-top: 9.5px;
+  font-size: .8em;
+  font-family: 'Press Start 2P', cursive;
+  letter-spacing: .06em;
+  -webkit-transition: opacity .3s ease-out, background-color .1125s ease-in;
+  transition: opacity .3s ease-out, background-color .1125s ease-in;
+  opacity: 1;
+  z-index: -1;
 }
