--- a/public/game/custom.css
+++ b/public/game/custom.css
@@ -124,6 +124,7 @@
 .modal-header {
 	padding: 6px 0 !important;
 	margin: 0 15px;
+	min-height: 60px;
 }
 
 .tada_game_modal {
@@ -133,8 +134,8 @@
 .tada_game_start_title {
 	object-fit: contain;
 	height: 45px;
-	width:100%;
-	padding-left:70px;
+	position: absolute;
+	left: calc(50% - 25px);
 }
 #tada-flower-falling {
 	width: 100%;
@@ -330,10 +331,6 @@
 	text-align: center;
 }
 
-#tada-game-state-first-text {
-		position: absolute;
-}
-
 #tada-game-state-second-text {
 	opacity: 0;
 }
@@ -449,6 +446,7 @@
 	background-color: #29abe2;
 	display: flex;
 	opacity: 0;
+	z-index: 2000;
 }
 
 #tada_notifi_cash_view {
@@ -514,6 +512,33 @@
 	height: 0;
 	opacity: 0;
 }
+
+.tada-close-button-div span {
+	height: 25px;
+	font-size: 20px;
+}
+
+@media(min-width:520px) {
+	#snackbar {
+	  visibility: hidden;
+	  min-width: 600px;
+	  margin-left: -300px;
+	  color: white;
+	  background-color: #ff3547;
+	  opacity: 0.8;
+	  text-align: center;
+	  border-radius: 2px;
+	  padding: 16px;
+	  border-radius: 10px;
+	  position: fixed;
+	  z-index: 1;
+	  left: 50%;
+	  top: 30px;
+	  font-size: 17px;
+	}
+}
+
+
 @media (max-width: 800px) {
 	.tada-dialog-body {
 		width: 100%;
@@ -523,6 +548,29 @@
 	}
 }
 @media (max-width: 520px) {
+
+	.tada-close-button-div span {
+		height: 24px;
+		font-size: 20px!important;
+		font-weight: 500;
+	}
+
+	#snackbar {
+	  visibility: hidden;
+	  min-width: 100%;
+	  color: white;
+	  background-color: #ff3547;
+	  opacity: 0.8;
+	  text-align: center;
+	  border-radius: 2px;
+	  padding: 16px;
+	  border-radius: 10px;
+	  position: fixed;
+	  z-index: 1;
+	  top: 30px;
+	  font-size: 17px;
+	}
+
 	.tada-dialog-body {
 		width: 100%;
 	}
@@ -620,15 +668,20 @@
 	}
 	.tada_remaind_bar {
 		height: fit-content;
-		padding: 10px;
+		padding: 5px;
 	}
 	.tada_remaind_bar span {
 		font-size: 11px;
+	}
+	.tada_remaind_bar .tada-close-button-div {
+			width: 20px !important;
+			height: 20px !important;
 	}
 	#tada_remained_notify_close {
 		top: 0;
 		right: 10px;
 		padding: 0;
+		padding-top: 5px;
 	}
 	#tada_ramaind_view_coupon_button {
 		margin-left: 0;
@@ -650,10 +703,7 @@
 		color: black;
 		transition: background  0.5s linear, color 0.5s linear, transform 0.5s linear;
 }
-.tada-close-button-div span {
-	height: 25px;
-	font-size: 20px;
-}
+
 .tada-close-button-div:hover {
 	transform: scale(0.9);
 	background-color: black;
@@ -1288,23 +1338,7 @@
   }
 }
 
-#snackbar {
-  visibility: hidden;
-  min-width: 600px;
-  margin-left: -300px;
-  color: white;
-  background-color: #ff3547;
-  opacity: 0.8;
-  text-align: center;
-  border-radius: 2px;
-  padding: 16px;
-  border-radius: 10px;
-  position: fixed;
-  z-index: 1;
-  left: 50%;
-  top: 30px;
-  font-size: 17px;
-}
+
 
 #snackbar.show {
   visibility: visible;
