--- a/public/game/tadaMain.css
+++ b/public/game/tadaMain.css
@@ -1,3 +1,59 @@
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Open Sans Regular'), local('OpenSans-Regular'), url(https://fonts.gstatic.com/s/opensans/v17/mem8YaGs126MiZpBA-UFWJ0bbck.woff2) format('woff2');
+  unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
+}
+/* cyrillic */
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Open Sans Regular'), local('OpenSans-Regular'), url(https://fonts.gstatic.com/s/opensans/v17/mem8YaGs126MiZpBA-UFUZ0bbck.woff2) format('woff2');
+  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
+}
+/* greek-ext */
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Open Sans Regular'), local('OpenSans-Regular'), url(https://fonts.gstatic.com/s/opensans/v17/mem8YaGs126MiZpBA-UFWZ0bbck.woff2) format('woff2');
+  unicode-range: U+1F00-1FFF;
+}
+/* greek */
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Open Sans Regular'), local('OpenSans-Regular'), url(https://fonts.gstatic.com/s/opensans/v17/mem8YaGs126MiZpBA-UFVp0bbck.woff2) format('woff2');
+  unicode-range: U+0370-03FF;
+}
+/* vietnamese */
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Open Sans Regular'), local('OpenSans-Regular'), url(https://fonts.gstatic.com/s/opensans/v17/mem8YaGs126MiZpBA-UFWp0bbck.woff2) format('woff2');
+  unicode-range: U+0102-0103, U+0110-0111, U+1EA0-1EF9, U+20AB;
+}
+/* latin-ext */
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Open Sans Regular'), local('OpenSans-Regular'), url(https://fonts.gstatic.com/s/opensans/v17/mem8YaGs126MiZpBA-UFW50bbck.woff2) format('woff2');
+  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+}
+/* latin */
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Open Sans Regular'), local('OpenSans-Regular'), url(https://fonts.gstatic.com/s/opensans/v17/mem8YaGs126MiZpBA-UFVZ0b.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
 #gamestartmodal {
   opacity: 1;
   background: #0000008c;
@@ -285,13 +341,13 @@
   color: #666666;
 }
 
-.tada-wheel-wrapper .tada-modal-custom {
-  padding-top: 13vh;
-}
 
-@media (min-width: 780px) {
+@media (min-width: 521px) {
   .tada-wheel-wrapper .tada-modal-custom {
     max-width: 700px !important;
+    display: flex;
+    height: 100%;
+    align-items: center;
   }
 }
 
@@ -560,6 +616,7 @@
     left: 50%;
     top: 30px;
     font-size: 17px;
+    height: unset;
   }
 }
 
@@ -569,6 +626,33 @@
   }
   .tada-dialog-mail-container {
     width: 100%;
+  }
+}
+
+@media (max-width: 760px) {
+  .tada-wheel-wrapper .tada_remaind_bar {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: fit-content;
+    padding: 5px;
+  }
+  .tada-wheel-wrapper .tada_remaind_bar span {
+    font-size: 13px;
+  }
+  .tada-wheel-wrapper .tada-close-button-div {
+    width: 22px;
+    height: 22px;
+  }
+  .tada-wheel-wrapper .tada-close-button-div span {
+    height:13px;
+  }
+  #tada_remained_notify_close {
+    padding-bottom:20px;
+  }
+  #tada_ramaind_view_coupon_button {
+    padding:3px;
+    font-size: 12px;
   }
 }
 
@@ -615,6 +699,7 @@
     z-index: 1;
     top: 30px;
     font-size: 17px;
+    height: unset;
   }
   .tada-wheel-wrapper .tada-dialog-body {
     width: 100%;
@@ -627,6 +712,7 @@
   }
   .tada-wheel-wrapper .tada-modal-custom {
     margin: 0 !important;
+
   }
   .tada-wheel-wrapper .tada_game_modal {
     position: fixed !important;
@@ -702,7 +788,13 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    height: fit-content;
+    padding: 5px;
   }
+  .tada-wheel-wrapper .tada_remaind_bar span {
+    font-size: 11px;
+  }
+
   .tada-wheel-wrapper .tada-game-state-text {
     font-size: 16px;
     margin-top: 10px;
@@ -725,13 +817,7 @@
   .tada-dialog-mail-container {
     margin-top: 10px;
   }
-  .tada-wheel-wrapper .tada_remaind_bar {
-    height: fit-content;
-    padding: 5px;
-  }
-  .tada-wheel-wrapper .tada_remaind_bar span {
-    font-size: 11px;
-  }
+
   .tada-wheel-wrapper .tada-dialog-mail-container {
     margin-top: 15px;
   }
@@ -1456,6 +1542,7 @@
   visibility: visible;
   -webkit-animation: fadein 0.5s, fadeout 0.5s 2.5s;
   animation: fadein 0.5s, fadeout 0.5s 2.5s;
+  height: unset;
 }
 
 @-webkit-keyframes fadein {
@@ -3253,7 +3340,7 @@
 .tada-wheel-wrapper .modal-footer .btn-group .btn+.btn{margin-left:-1px}
 .tada-wheel-wrapper .modal-footer .btn-block+.btn-block{margin-left:0}
 .tada-wheel-wrapper .modal-scrollbar-measure{position:absolute;top:-9999px;width:50px;height:50px;overflow:scroll}
-@media (min-width:768px){.tada-wheel-wrapper .modal-dialog{margin:30px auto}
+@media (min-width:768px){.tada-wheel-wrapper .modal-dialog{margin:0 auto}
 .tada-wheel-wrapper .modal-content{-webkit-box-shadow:0 5px 15px rgba(0, .tada-wheel-wrapper 0, .tada-wheel-wrapper 0, .tada-wheel-wrapper 0.5);box-shadow:0 5px 15px rgba(0, .tada-wheel-wrapper 0, .tada-wheel-wrapper 0, .tada-wheel-wrapper 0.5)}
 .tada-wheel-wrapper .modal-sm{width:300px}
 }
@@ -3337,7 +3424,7 @@
 .tada-wheel-wrapper .pull-right{float:right !important}
 .tada-wheel-wrapper .pull-left{float:left !important}
 .tada-wheel-wrapper .hide{display:none !important}
-.tada-wheel-wrapper .show{display:block !important}
+.tada-wheel-wrapper .show{display:block !important; height: 103vh;}
 .tada-wheel-wrapper .invisible{visibility:hidden}
 .tada-wheel-wrapper .text-hide{font:0/0 a;color:transparent;text-shadow:none;background-color:transparent;border:0}
 .tada-wheel-wrapper .hidden{display:none !important}
