--- a/public/game/tadaMain.css
+++ b/public/game/tadaMain.css
@@ -1,50 +1,4 @@
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Open Sans Regular'), local('OpenSans-Regular'), url(https://fonts.gstatic.com/s/opensans/v17/mem8YaGs126MiZpBA-UFWJ0bbck.woff2) format('woff2');
-  unicode-range: U+0460-052F, U+1C80-1C88, U+20B4, U+2DE0-2DFF, U+A640-A69F, U+FE2E-FE2F;
-}
-/* cyrillic */
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Open Sans Regular'), local('OpenSans-Regular'), url(https://fonts.gstatic.com/s/opensans/v17/mem8YaGs126MiZpBA-UFUZ0bbck.woff2) format('woff2');
-  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
-}
-/* greek-ext */
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Open Sans Regular'), local('OpenSans-Regular'), url(https://fonts.gstatic.com/s/opensans/v17/mem8YaGs126MiZpBA-UFWZ0bbck.woff2) format('woff2');
-  unicode-range: U+1F00-1FFF;
-}
-/* greek */
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Open Sans Regular'), local('OpenSans-Regular'), url(https://fonts.gstatic.com/s/opensans/v17/mem8YaGs126MiZpBA-UFVp0bbck.woff2) format('woff2');
-  unicode-range: U+0370-03FF;
-}
-/* vietnamese */
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Open Sans Regular'), local('OpenSans-Regular'), url(https://fonts.gstatic.com/s/opensans/v17/mem8YaGs126MiZpBA-UFWp0bbck.woff2) format('woff2');
-  unicode-range: U+0102-0103, U+0110-0111, U+1EA0-1EF9, U+20AB;
-}
-/* latin-ext */
-@font-face {
-  font-family: 'Open Sans';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Open Sans Regular'), local('OpenSans-Regular'), url(https://fonts.gstatic.com/s/opensans/v17/mem8YaGs126MiZpBA-UFW50bbck.woff2) format('woff2');
-  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
-}
+
 /* latin */
 @font-face {
   font-family: 'Open Sans';
@@ -249,7 +203,6 @@
 }
 
 .tada-wheel-wrapper .tada_apply_my_account_parent {
-  width: 70%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -739,7 +692,6 @@
     width: 100%;
   }
   .tada-wheel-wrapper .tada-success-maker-board {
-    width: 100%;
     background-position: center;
   }
   .tada-wheel-wrapper .tada-game-discount-code-text {
@@ -837,6 +789,136 @@
     margin-left: 0;
     font-size: 12px;
     width: 150px;
+  }
+}
+
+@media only screen
+and (max-device-width : 750px)
+and (orientation : landscape) {
+  .tada-wheel-wrapper .tada-success-maker-left-text {
+    font-size: 18px;
+  }
+  #tada-success-maker-text {
+    font-size: 17px;
+  }
+  .tada-wheel-wrapper .tada-success-maker-board {
+    padding-bottom: 50px;
+  }
+  .tada-wheel-wrapper .tada-dialog-body {
+    flex-direction: row;
+  }
+  .tada-wheel-wrapper .tada-modal-custom {
+    display: block;
+    transform: scale(1);
+  }
+  .tada-wheel-wrapper .modal-dialog {
+    margin: 35px;
+  }
+  .tada-wheel-wrapper .tada-dialog-body {
+    width:100%;
+  }
+  .tada-wheel-wrapper .tada-modal-top-section {
+    width:50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .tada-wheel-wrapper .tada-modal-bottom-section {
+    width:50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .tada-wheel-wrapper .tada-close-button-div span {
+    height: unset;
+  }
+  .tada-wheel-wrapper .tada-game-spin-title {
+    font-size:24px;
+  }
+  .tada-wheel-wrapper .tada-dialog-mail-container {
+    width: 100%;
+  }
+  .tada-wheel-wrapper .tada-dialog-mail-container #tada_game_email_input {
+    height: 33px;
+    font-size: 14px;
+  }
+  .tada-wheel-wrapper .tada-dialog-mail-container {
+    margin-top: 10px;
+  }
+  .tada-wheel-wrapper .tada-game-spin-text {
+    font-size: 11px;
+  }
+  .tada-wheel-wrapper #tada_spin_start_button {
+    padding: 6px;
+    font-size: 13px;
+  }
+  .tada-wheel-wrapper .tada-progress-bar-top-text {
+    padding-top: 12px;
+    font-size: 13px;
+  }
+  .tada-wheel-wrapper .tada-progress-bar {
+    height:20px;
+    margin-bottom: 20px;
+  }
+  .tada-wheel-wrapper .tada-game-state-text {
+    font-size:18px;
+  }
+  .tada-wheel-wrapper .tada-modal-footer img {
+    height:20px;
+  }
+  .tada-wheel-wrapper .tada_game_start_title {
+    height:38px;
+  }
+  .tada-wheel-wrapper .tada_game_modal {
+    padding:10px;
+  }
+  .tada-wheel-wrapper .modal-header {
+    min-height:48px;
+  }
+  .tada-wheel-wrapper .modal-dialog {
+    margin-top: 30px !important;
+  }
+  .tada-wheel-wrapper .tada-dialog-body-success {
+    flex-direction: row;
+    width: 100%;
+  }
+  .tada-wheel-wrapper .tada-game-spin-title1 {
+    font-size: 25px;
+  }
+  .tada-wheel-wrapper .tada-success-maker-board {
+    height: 190px;
+    width: 280px;
+    margin-top: 40px;
+  }
+  .tada-wheel-wrapper .tada-game-expiry {
+    margin-top:10px;
+  }
+  .tada-wheel-wrapper .tada-game-body-divide {
+    width: 80%;
+    margin-top: 2px;
+    margin-bottom: 2px;
+  }
+  .tada-wheel-wrapper .tada_apply_my_account_parent {
+    width: 100%;
+  }
+  .tada-wheel-wrapper .modal-body {
+    padding: 0 20px !important;
+  }
+  #tada_apply_my_discount  {
+    padding: 7px;
+  }
+  .tada-wheel-wrapper .tada-game-discount-code-text {
+    font-size: 17px;
+  }
+  .tada-dialog-body-success {
+
+  }
+  .tada-success-top-section {
+
+  }
+  .tada-wheel-wrapper .tada-success-bottom-section .tada-game-spin-text {
+    font-size: 14px;
   }
 }
 
